Fix: Change object fit for recipe page images so they are no longer distorted

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ section {
 .crop {
     max-height: 398px;
     max-width: 398px;
+    object-fit: cover;
 }
 
 .attribution {
